# garoon-mcp-server

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_SETUP.example.md  Dockerfile  README.md  debug_connection.py  garoon_client.py  get_today_schedule.py  implementation-summary-202511301633.md  main.py  pyproject.toml  test_auth.py  test_meeting_scheduler.py  test_server.py  test_timezone.py  test_user_schedule.py
tests/: test_garoon_client.py  test_main.py
