[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garoon-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Garoon API integration"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
garoon-mcp-server = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.ruff]
# CLAUDE.mdのコーディング規約に従った設定
line-length = 120
target-version = "py311"

# 除外ディレクトリ
extend-exclude = [
    "db_schema/",  # Submodule
]

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# 無効にするルール
ignore = [
    "E501",  # line-length (ruff formatで自動調整)
]

# ファイル別ルール
[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # assert文許可
    "PLR2004",  # マジック値許可
    "D",  # docstring省略可
    "N999",  # 日本語関数名許可
    "S105",  # パスワード直書き許可
    "S106",  # パスワード直書き許可
]
"scripts/*" = [
    "T201",  # print文許可
]

[tool.ruff.format]
# フォーマット設定
quote-style = "double"  # ダブルクォート
indent-style = "space"
line-ending = "lf"  # Unix改行コード

[tool.ruff.lint.pydocstyle]
# NumPyスタイルのdocstring
convention = "numpy"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
